--- a/content/posts/the-ultimate-guide-to-scaling-your-startup-in-90-days.mdx
+++ b/content/posts/the-ultimate-guide-to-scaling-your-startup-in-90-days.mdx
@@ -7,7 +7,7 @@ seo:
   title: "The Ultimate Guide to Scaling Your Startup in 90 Days."
   description: "Lorem ipsum odor amet"
   image: null
-coverImage: null
+coverImage: "/uploads/production/blog-the-ultimate-guide-to-scaling-your-startup-in-90-days/4d3aab04b351bf872980bb210c4a5e44a29d1a0d-1920x1459.jpg"
 ---
 
 **_Lorem ipsum odor amet, consectetuer adipiscing elit._** Nascetur malesuada litora pellentesque habitant; quisque placerat volutpat. Auctor varius accumsan turpis pretium vehicula himenaeos vitae ipsum pharetra. Tempus facilisi morbi eros egestas id metus. Blandit sapien facilisi vitae litora arcu primis parturient. In metus nam penatibus rhoncus eros. Class rutrum [jamesrea](https://jamesrea.co) purus turpis aenean curabitur maximus. Magnis netus praesent; ornare vulputate tellus netus. Ullamcorper quam ultricies eu orci ut venenatis nam eu.
