Hero: constrain hero block content to max-w-7xl; set hero heading to xxl; keep hero image full-width

--- a/content/pages/sample-page.mdx
+++ b/content/pages/sample-page.mdx
@@ -6,7 +6,7 @@ seo:
   title: "Sample Page | Master the Pixel"
   description: "A sample page for testing the MDX content system."
 draft: false
-coverImage: "/assets/placeholder-cover.jpg"
+coverImage: "/uploads/sample.jpg"
 ---
 
 # Sample Page
