--- a/content/pages/sample.mdx
+++ b/content/pages/sample.mdx
@@ -6,7 +6,7 @@ seo:
   title: "Sample Page | Master the Pixel"
   description: "A sample page for testing the MDX content system."
 draft: false
-coverImage: "/assets/placeholder-cover.jpg"
+coverImage: "/uploads/sample.jpg"
 ---
 
 # Sample Page
