hero: support fullWidth hero + make Home hero full-bleed; update types & MDX snapshot

--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -5,160 +5,219 @@ date: "2024-11-19T20:55:46Z"
 seo:
   title: "Home | Master the Pixel"
   description: "Lorem ipsum dolor sit amet"
-coverImage: "/uploads/production/home/096ba04d1c286e7df0a88ccedb463985688e1fd9-1214x1172.png"
+coverImage: "/uploads/production/home/ae254961a3de7989b61288b86685c08b5ca1f538-2400x1350.jpg"
 draft: false
-heroBlock:
-  _key: "ba612ae0cf8d"
-  buttons:
-    - _key: "e39fe2fafc6c"
-      _type: "buttonObject"
-      buttonAnchorId: "features"
-      buttonAnchorLocation: "currentPage"
-      buttonText: "Learn More"
-      buttonType: "anchor"
-      buttonVariant: "primary"
-      buttonWidth: "auto"
-      showButton: true
-    - _key: "4c0cdaa9ef93"
-      _type: "buttonObject"
-      buttonExternalUrl: "https://github.com/jamesreaco"
-      buttonPageReference:
-        _ref: "servicesPage"
-        _type: "reference"
-      buttonText: "Star on GitHub"
-      buttonType: "external"
-      buttonVariant: "outline"
-      buttonWidth: "auto"
-      showButton: true
-  content:
-    - _key: "4fd6e4d03484"
-      _type: "block"
-      children:
-        - _key: "199b2bcd7c87"
-          _type: "span"
-          marks: []
-          text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae lectus non metus gravida malesuada. Phasellus vulputate nec nisi sed elementum."
-      markDefs: []
-      style: "normal"
-  dialogType: "video"
-  heading: "The Open Source Marketing Website."
-  image:
-    _type: "image"
-    altText: "Product Demo"
-    cornerRadius: "rounded"
-    height: "full"
-  mediaType: "image"
-  overlayType: "dark"
-  videoUrl: "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-featureGridBlock:
-  _key: "01ed10dd3353"
-  _type: "featureCardsBlock"
-  buttons:
-    - _key: "402d9dd2bb84"
-      _type: "buttonObject"
-      buttonExternalUrl: "https://github.com/jamesreaco"
-      buttonPageReference:
-        _ref: "97854198-13ae-465a-a7f0-3fbc869d9324"
-        _type: "reference"
-      buttonText: "Get Started"
-      buttonType: "external"
-      buttonVariant: "tertiary"
-      buttonWidth: "auto"
-      showButton: true
-  callToActionButtons:
-    - _key: "81cbd60f0ebd"
-      _type: "buttonObject"
-      buttonAnchorLocation: "currentPage"
-      buttonPageReference:
-        _ref: "servicesPage"
-        _type: "reference"
-      buttonText: "Learn More"
-      buttonType: "internal"
-      buttonVariant: "outline"
-      buttonWidth: "auto"
-      showButton: true
-    - _key: "93b06333333f"
-      _type: "buttonObject"
-      buttonAnchorLocation: "currentPage"
-      buttonExternalUrl: "https://github.com/jamesreaco"
-      buttonText: "Star on GitHub"
-      buttonType: "external"
-      buttonVariant: "primary"
-      buttonWidth: "auto"
-      showButton: true
-  callToActionContent:
-    - _key: "77b2713fc058"
-      _type: "block"
-      children:
-        - _key: "d30f194c10890"
-          _type: "span"
-          marks: []
-          text: "Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est."
-      markDefs: []
-      style: "normal"
-  callToActionHeading: "Want to take masterthepixel for a spin?"
-  features:
-    - _key: "343dd038e89d"
-      button:
-        buttonExternalUrl: "https://github.com/jamesreaco"
-        buttonPageReference:
-          _ref: "97854198-13ae-465a-a7f0-3fbc869d9324"
-          _type: "reference"
-        buttonText: "Get Started"
-        buttonType: "external"
-        buttonVariant: "tertiary"
-        buttonWidth: "auto"
-        showButton: true
-      description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae lectus non metus."
-      image:
-        _type: "image"
-      items:
-        - "Excepteur nisi proident sunt aliquip ipsum dolore."
-        - "Veniam exercitation dolor magna laboris ut officia."
-        - "Nulla pariatur sint labore adipisicing consectetur."
-      title: "Magna Aliqua"
-    - _key: "9074093c08d0"
-      button:
-        buttonExternalUrl: "https://github.com/jamesreaco"
-        buttonPageReference:
-          _ref: "projectsPage"
-          _type: "reference"
-        buttonText: "Get Started"
-        buttonType: "external"
-        buttonVariant: "tertiary"
-        showButton: true
-      description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae lectus non metus."
-      image:
-        _type: "image"
-      items:
-        - "Minim voluptate dolore aliqua fugiat duis proident."
-        - "Irure dolor magna aliqua nisi excepteur adipisicing."
-        - "Cillum dolore fugiat nulla pariatur sint occaecat."
-      title: "Nulla Pariatur"
-  heading: "All the features you need"
-  showCallToAction: true
-testimonialBlock:
-  _key: "3f4c64bf4370"
-  _type: "testimonialBlock"
-  anchorId: "testimonials"
-  cornerRadiusBottom: "rounded"
-  cornerRadiusTop: "straight"
-  eyebrow: "Testimonials"
-  heading: "Our Happy Customers"
-  testimonials:
-    - _key: "9ebf095186b5"
-      _ref: "27fe199b-939c-405b-9508-105a53a7d1f8"
-      _type: "reference"
-    - _key: "a47881ceae5f"
-      _ref: "ba5ce2a6-eefd-443b-b5e2-8e65b77a5729"
-      _type: "reference"
-    - _key: "1d40f18648a8"
-      _ref: "95596b7e-e545-4a82-bdcc-7cb4a8b369d7"
-      _type: "reference"
 ---
 
 import { Hero, FeatureGrid, Testimonial } from '@/components/mdx';
 
-<Hero />
-<FeatureGrid />
-<Testimonial />
+export const heroBlock = {
+  "_key": "ba612ae0cf8d",
+  "fullWidth": true,
+  "buttons": [
+    {
+      "_key": "e39fe2fafc6c",
+      "_type": "buttonObject",
+      "buttonAnchorId": "features",
+      "buttonAnchorLocation": "currentPage",
+      "buttonText": "Learn More",
+      "buttonType": "anchor",
+      "buttonVariant": "primary",
+      "buttonWidth": "auto",
+      "showButton": true
+    },
+    {
+      "_key": "4c0cdaa9ef93",
+      "_type": "buttonObject",
+      "buttonExternalUrl": "https://github.com/jamesreaco",
+      "buttonPageReference": {
+        "_ref": "servicesPage",
+        "_type": "reference"
+      },
+      "buttonText": "Star on GitHub",
+      "buttonType": "external",
+      "buttonVariant": "outline",
+      "buttonWidth": "auto",
+      "showButton": true
+    }
+  ],
+  "content": [
+    {
+      "_key": "4fd6e4d03484",
+      "_type": "block",
+      "children": [
+        {
+          "_key": "199b2bcd7c87",
+          "_type": "span",
+          "marks": [],
+          "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae lectus non metus gravida malesuada. Phasellus vulputate nec nisi sed elementum."
+        }
+      ],
+      "markDefs": [],
+      "style": "normal"
+    }
+  ],
+  "dialogType": "video",
+  "heading": "The Open Source Marketing Website.",
+  "image": {
+    "_type": "image",
+    "url": "/uploads/production/home/ae254961a3de7989b61288b86685c08b5ca1f538-2400x1350.jpg",
+    "altText": "Product Demo",
+    "cornerRadius": "rounded",
+    "height": "full"
+  },
+  "mediaType": "image",
+  "overlayType": "dark",
+  "videoUrl": "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+};
+
+<Hero block={heroBlock} />
+
+export const featureGridBlock = {
+  "_key": "01ed10dd3353",
+  "_type": "featureCardsBlock",
+  "buttons": [
+    {
+      "_key": "402d9dd2bb84",
+      "_type": "buttonObject",
+      "buttonExternalUrl": "https://github.com/jamesreaco",
+      "buttonPageReference": {
+        "_ref": "97854198-13ae-465a-a7f0-3fbc869d9324",
+        "_type": "reference"
+      },
+      "buttonText": "Get Started",
+      "buttonType": "external",
+      "buttonVariant": "tertiary",
+      "buttonWidth": "auto",
+      "showButton": true
+    }
+  ],
+  "callToActionButtons": [
+    {
+      "_key": "81cbd60f0ebd",
+      "_type": "buttonObject",
+      "buttonAnchorLocation": "currentPage",
+      "buttonPageReference": {
+        "_ref": "servicesPage",
+        "_type": "reference"
+      },
+      "buttonText": "Learn More",
+      "buttonType": "internal",
+      "buttonVariant": "outline",
+      "buttonWidth": "auto",
+      "showButton": true
+    },
+    {
+      "_key": "93b06333333f",
+      "_type": "buttonObject",
+      "buttonAnchorLocation": "currentPage",
+      "buttonExternalUrl": "https://github.com/jamesreaco",
+      "buttonText": "Star on GitHub",
+      "buttonType": "external",
+      "buttonVariant": "primary",
+      "buttonWidth": "auto",
+      "showButton": true
+    }
+  ],
+  "callToActionContent": [
+    {
+      "_key": "77b2713fc058",
+      "_type": "block",
+      "children": [
+        {
+          "_key": "d30f194c10890",
+          "_type": "span",
+          "marks": [],
+          "text": "Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est."
+        }
+      ],
+      "markDefs": [],
+      "style": "normal"
+    }
+  ],
+  "callToActionHeading": "Want to take masterthepixel for a spin?",
+  "features": [
+    {
+      "_key": "343dd038e89d",
+      "button": {
+        "buttonExternalUrl": "https://github.com/jamesreaco",
+        "buttonPageReference": {
+          "_ref": "97854198-13ae-465a-a7f0-3fbc869d9324",
+          "_type": "reference"
+        },
+        "buttonText": "Get Started",
+        "buttonType": "external",
+        "buttonVariant": "tertiary",
+        "buttonWidth": "auto",
+        "showButton": true
+      },
+      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae lectus non metus.",
+      "image": {
+        "_type": "image"
+      },
+      "items": [
+        "Excepteur nisi proident sunt aliquip ipsum dolore.",
+        "Veniam exercitation dolor magna laboris ut officia.",
+        "Nulla pariatur sint labore adipisicing consectetur."
+      ],
+      "title": "Magna Aliqua"
+    },
+    {
+      "_key": "9074093c08d0",
+      "button": {
+        "buttonExternalUrl": "https://github.com/jamesreaco",
+        "buttonPageReference": {
+          "_ref": "projectsPage",
+          "_type": "reference"
+        },
+        "buttonText": "Get Started",
+        "buttonType": "external",
+        "buttonVariant": "tertiary",
+        "showButton": true
+      },
+      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae lectus non metus.",
+      "image": {
+        "_type": "image"
+      },
+      "items": [
+        "Minim voluptate dolore aliqua fugiat duis proident.",
+        "Irure dolor magna aliqua nisi excepteur adipisicing.",
+        "Cillum dolore fugiat nulla pariatur sint occaecat."
+      ],
+      "title": "Nulla Pariatur"
+    }
+  ],
+  "heading": "All the features you need",
+  "showCallToAction": true
+};
+
+<FeatureGrid block={featureGridBlock} />
+
+export const testimonialBlock = {
+  "_key": "3f4c64bf4370",
+  "_type": "testimonialBlock",
+  "anchorId": "testimonials",
+  "cornerRadiusBottom": "rounded",
+  "cornerRadiusTop": "straight",
+  "eyebrow": "Testimonials",
+  "heading": "Our Happy Customers",
+  "testimonials": [
+    {
+      "_key": "9ebf095186b5",
+      "_ref": "27fe199b-939c-405b-9508-105a53a7d1f8",
+      "_type": "reference"
+    },
+    {
+      "_key": "a47881ceae5f",
+      "_ref": "ba5ce2a6-eefd-443b-b5e2-8e65b77a5729",
+      "_type": "reference"
+    },
+    {
+      "_key": "1d40f18648a8",
+      "_ref": "95596b7e-e545-4a82-bdcc-7cb4a8b369d7",
+      "_type": "reference"
+    }
+  ]
+};
+
+<Testimonial block={testimonialBlock} />
