content(home): set hero image height to 'short' so Home hero matches Services; update snapshot

--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -48,7 +48,7 @@ heroBlock:
     url: "/uploads/production/home/ae254961a3de7989b61288b86685c08b5ca1f538-2400x1350.jpg"
     altText: "Product Demo"
     cornerRadius: rounded
-    height: full
+    height: short
   mediaType: image
   overlayType: dark
   videoUrl: "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
